# deep-learning-boilerplate

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml
src/: gan.py  main.py  networks.py
src/gan/: nn.py  training.py
