[tool.poetry]
name = "deep-learning-boilerplate"
version = "0.1.0"
description = ""
authors = ["Zhenyu Lin <zhenyu.lyn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
scipy = "*"
numpy = "<1.17"
matplotlib = "*"
pandas = "*"
statsmodels = "*"
sklearn = "*"
tensorflow = "*"
tensorflow-datasets = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
